# PyMandelbrot

./: .readthedocs.yml  CITATION.cff  Dockerfile  LICENSE  README.md  bibliography.md  reana.yaml  requirements.txt  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md
docs/source/: PyMandelbrot.rst  conf.py  index.rst  introduction.rst  modules.rst
examples/: README.md  plot_example.py  plot_mandelbrot.ipynb
src/PyMandelbrot/: __init__.py  mandelbrot.py
