[metadata]
name = PyMandelbrot
version = 1.0.0
author = M. Rossi
author_email = marco.rossi@cern.ch
description = Mandelbrot set dynamics visualization with Python
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE
url = https://github.com/openlab-test/example-repo.git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Unix
    Topic :: Scientific/Engineering :: Mathematics

[options]
zip_safe = False
package_dir=
    =src
packages=find:
python_requires = >=3.8
install_requires =
    numpy>=1.22

[options.packages.find]
where = src

[options.extras_require]
examples =
    matplotlib==3.5.1
    jupyter==1.0.0
docs =
    sphinx>=4.5.0
    sphinx-rtd-theme>=1.0.0
    sphinxcontrib-napoleon>=0.7